# uosio.cdt

./: CMakeLists.txt  Doxyfile  README.md  build.sh  install.sh  pipeline.jsonc  uninstall.sh
docker/: install_deb.sh
docs/guides/: abi-generator-attributes.md  basic-usage.md  cmake.md  first-smart-contract.md  generator-attributes.md  native-tester.md
docs/tools/: uosio-abidiff.md  uosio-abigen.md  uosio-cpp.md  uosio-init.md  uosio-ld.md
docs/upgrading/: 1.2-to-1.3.md  1.5-to-1.6.md
examples/abcounter/: abcounter.cpp
examples/abigen_test/: CMakeLists.txt  abitest.cpp
examples/addressbook/: addressbook.cpp
examples/dice/: CMakeLists.txt  README.md  dice.cpp  dice.hpp
examples/hello/: CMakeLists.txt  hello.clauses.md  hello.cpp  hello.hpp
examples/multi_index_example/: CMakeLists.txt  multi_index_example.cpp
examples/send_inline/: CMakeLists.txt  send_inline.cpp
examples/template/: CMakeLists.txt
examples/uosbetdice/: CMakeLists.txt  uosbetdice.cpp  uosbetdice.hpp
imports/: uosio.imports.in
libraries/: CMakeLists.txt
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc++/libcxx/include/: iostream  new
libraries/libc++/libcxx/src/: locale.cpp  uosio.cpp
libraries/libc++/libcxx/src/include/: loader.h
libraries/libc++/libcxx/test/std/experimental/string.view/string.view.find/: find_first_not_of_pointer_size_size.pass.cpp  find_first_of_pointer_size_size.pass.cpp  find_last_not_of_pointer_size_size.pass.cpp  find_last_of_pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/basic.string/string.ops/string_find.first.not.of/: pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/basic.string/string.ops/string_find.first.of/: pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/basic.string/string.ops/string_find.last.not.of/: pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/basic.string/string.ops/string_find.last.of/: pointer_size_size.pass.cpp
libraries/libc++/libcxx/test/std/strings/string.view/string.view.find/: find_first_not_of_pointer_size_size.pass.cpp  find_first_of_pointer_size_size.pass.cpp  find_last_not_of_pointer_size_size.pass.cpp  find_last_of_pointer_size_size.pass.cpp
libraries/libc/musl/include/: unistd.h
libraries/libc/musl/include/bits/: alltypes.h  stddef.h
libraries/libc/musl/src/stdio/: __stdio_write.c  printf.c
libraries/native/: CMakeLists.txt  crt.cpp  crt.hpp  intrinsics.cpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/native/native/uosio/: crt.hpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/rt/: compiler_builtins.cpp
libraries/uosiolib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  binary_extension.hpp  chain.h  compiler_builtins.h  contract.hpp  crypto.cpp  crypto.h  crypto.hpp  datastream.hpp  db.h  dispatcher.hpp  fixed_bytes.hpp  fixed_key.hpp  fixedpoint.hpp  ignore.hpp  malloc.cpp  memory.hpp  multi_index.hpp  name.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.h  privileged.hpp  producer_schedule.hpp  public_key.hpp  serialize.hpp  simple_malloc.cpp  singleton.hpp  symbol.hpp  system.h  system.hpp  time.hpp  transaction.h  transaction.hpp  types.h  (+3 more)
libraries/uosiolib/capi/uosio/: action.h  chain.h  crypto.h  db.h  permission.h  print.h  privileged.h  system.h  transaction.h  types.h
libraries/uosiolib/contracts/uosio/: action.hpp  contract.hpp  dispatcher.hpp  multi_index.hpp  permission.hpp  privileged.hpp  producer_schedule.hpp  singleton.hpp  system.hpp  transaction.hpp  uosio.hpp
libraries/uosiolib/core/uosio/: asset.hpp  binary_extension.hpp  check.hpp  crypto.hpp  datastream.hpp  fixed_bytes.hpp  ignore.hpp  name.hpp  print.hpp  rope.hpp  serialize.hpp  symbol.hpp  time.hpp  varint.hpp
modules/: ClangExternalProject.txt  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  UosioCDTMacros.cmake.in  UosioLibConfig.cmake.in  UosioWasmToolchain.cmake.in  uosio.cdt-config.cmake
scripts/: generate_bottle.sh  generate_tarball.sh  uosio_build_amazon.sh  uosio_build_centos.sh  uosio_build_darwin.sh  uosio_build_fedora.sh  uosio_build_ubuntu.sh
scripts/ricarduos/: README.md  ricarduos.py
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  codegen_tests.cpp  contracts.hpp.in  main.cpp  memory_tests.cpp
tests/unit/: CMakeLists.txt  asset_tests.cpp  binary_extension_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  fixed_bytes_tests.cpp  name_tests.cpp  print_tests.cpp  rope_tests.cpp  serialize_tests.cpp  symbol_tests.cpp  system_tests.cpp  time_tests.cpp  varint_tests.cpp
tests/unit/test_contracts/: malloc_tests.cpp  simple_tests.cpp  simple_wrong.abi  transfer.cpp  transfer.hpp
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  uosio-abidiff.cpp.in
tools/abigen/: CMakeLists.txt  uosio-abigen.cpp.in
tools/cc/: CMakeLists.txt  uosio-cc.cpp.in  uosio-cpp.cpp.in
tools/include/: compiler_options.hpp.in
tools/include/uosio/: abi.hpp  abigen.hpp  codegen.hpp  gen.hpp  utils.hpp
tools/include/uosio/whereami/: whereami.hpp
tools/init/: CMakeLists.txt  uosio-init.cpp
tools/ld/: CMakeLists.txt  uosio-ld.cpp.in
uosio_llvm/: .gitmodules  CMakeLists.txt
uosio_llvm/cmake/: config.guess
uosio_llvm/docs/: CodeOfConduct.rst
uosio_llvm/include/llvm/BinaryFormat/: MachO.def  MachO.h
uosio_llvm/include/llvm/IR/: Attributes.td
uosio_llvm/include/llvm/Object/: MachO.h  Wasm.h
uosio_llvm/lib/MC/: MCAsmStreamer.cpp  MachObjectWriter.cpp
uosio_llvm/lib/MC/MCParser/: DarwinAsmParser.cpp
uosio_llvm/lib/Object/: MachOObjectFile.cpp  WasmObjectFile.cpp
uosio_llvm/lib/Transforms/: CMakeLists.txt
uosio_llvm/lib/Transforms/UosioApply/: CMakeLists.txt  UosioApply.cpp
uosio_llvm/lib/Transforms/UosioSoftfloat/: CMakeLists.txt  UosioSoftfloat.cpp
uosio_llvm/tools/llvm-nm/: llvm-nm.cpp
uosio_llvm/tools/llvm-objdump/: MachODump.cpp
uosio_llvm/tools/llvm-rc/: ResourceScriptStmt.cpp  ResourceScriptStmt.h
uosio_llvm/tools/llvm-readobj/: MachODumper.cpp
(+51 files in other folders)
